# ghc-gdp

./: LICENSE  ghc-gdp.cabal
src/: MyLib.hs
src/GHC/: GDP.hs  Logic.hs
test/: Main.hs
