cabal-version:      3.0
name:               ghc-gdp
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Will Badart
maintainer:         will@willbadart.com
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  GHC.GDP
    other-modules:    GHC.Logic
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                      , ghc ^>= 9.6
                      , ghc-tcplugin-api ^>=0.18
                      , gdp ^>= 0.0.3
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite ghc-gdp-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options:      -ddump-tc-trace
                      -dcore-lint
                      -fforce-recomp
    build-depends:    base ^>=4.18.2.1
		      , ghc-gdp
		      , gdp ^>= 0.0.3
